--- a/payment/pom.xml
+++ b/payment/pom.xml
@@ -23,7 +23,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>killbill-payment-squaretrade</artifactId>
-    <version>0.20.1-SNAPSHOT</version>
+    <version>0.20.1</version>
     <packaging>jar</packaging>
     <name>killbill-payment</name>
     <dependencies>
