--- a/util/pom.xml
+++ b/util/pom.xml
@@ -25,7 +25,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>killbill-util-squaretrade</artifactId>
-    <version>0.20.1-SNAPSHOT</version>
+    <version>0.20.1</version>
     <packaging>jar</packaging>
     <name>killbill-util</name>
     <dependencies>
